--- a/src/posts/introducing-thirsty-bot.mdx
+++ b/src/posts/introducing-thirsty-bot.mdx
@@ -13,22 +13,22 @@ limited options. I went to a spot down the road for a whiskey sour, but got to t
 an application that could take all the ingredients I have on-hand, and recommend what I can make. And so,
 [Thirsty Bot](https://thirsty.bot) was born.
 
-It's a simple application that lets you build a list of ingredients on-hand, and then uses an LLM to come
-up with one beverage that can be made with a subset of those ingredients.
+It's a simple application that lets you select a list of ingredients you have on-hand, and then uses an LLM to come
+up with one beverage that can be made with either all, or a subset of those ingredients.
 
 ![](thirsty-bot:example-ui.png)
 
-Here's one of my favorite drinks, created from my list of ingredients, along with an
-enticing photo!
+Here's one of my favorite drinks, created from my list of ingredients (after restocking the bar of course), along with an
+enticing photo:
 
 ![](thirst-bot:example-old-fashioned.png)
 
-Sometimes it comes up with some non-traditional drinks that I might not have thought of!
+Sometimes it comes up with some non-traditional drinks that I might not have thought of:
 
 ![](thirsty-bot:exampl-espresso-coconut.png)
 
 It's not perfect all the time; I've definitely thrown some weird ingredients at it and gotten
-some strange results, but it's fun nontheless to see what can be made with a collection of what I have
+some strange results, but it's fun nonetheless to see what can be made with a collection of what I have
 available!
 
 ---
