--- a/src/posts/vercel-deployment-protection.mdx
+++ b/src/posts/vercel-deployment-protection.mdx
@@ -13,7 +13,7 @@ current production deployment. When enabled, you and any team members will need 
 in order to access any past production deplyments, or any preview deployments.
 
 This means that your preview and non-production deployments (including API routes) will require an authentication cookie
-to grant access. This will be important later when moving to this approach from an existing Next app.
+to grant access. This will be important later when moving to this approach for an existing Next app.
 
 This Next.js app for [keegan.codes](https://keegan.codes) was not originally built with standard protection enabled, so I had to follow Vercel's
 [migration guide](https://vercel.com/docs/security/deployment-protection#migrating-to-standard-protection) in
